adding structure to index.html

--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Splenda Limo Inc.</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>Welcome to Splenda Limo Inc.</h1>
-        </header>
-        <section>
-            <h2>Book a ride</h2>
+<head>
+    <title>Splenda Limo Inc.</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+<header>
+    <h1>Welcome to Splenda Limo Inc.</h1>
+</header>
+<main>
+    <section>
+        <h2>Book a ride</h2>
+        <div class="booking-container">
             <form id="booking-form">
                 <input type="text" id="name" placeholder="Your name">
                 <input type="text" id="destination" placeholder="Your destination">
                 <input type="submit" value="Book now">
             </form>
-        </section>
-        <script src="scripts.js"></script>
-    </body>
+        </div>
+    </section>
+</main>
+<footer>
+    <p>© 2023 Splenda Limo Inc.</p>
+</footer>
+<script src="scripts.js"></script>
+</body>
 </html>
