Added SVGs and a loading page index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<div id="loading">
+
+        <img id="taxi" src="images/car-taxi-svgrepo-com.svg" alt="Loading..." />
+
+
+    </svg>
+</div>
+<div id="loader-wrapper">
+    <div id="loading-center-absolute">
+        <img src="images/car-taxi-svgrepo-com.svg" id="object_one" class="object" />
+    </div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+</div>
+
 <header id="home">
     <h1 class="fade-in-text">Welcome to Splenda Limo Inc.</h1>
     <img src="https://img.freepik.com/free-vector/taxi-app-concept-illustration_52683-36028.jpg" alt="Splenda Limo">
